# The-Mountain

./: .gitignore  CMakeLists.txt  Guidelines.md  Rectangle.c
Despicable/: 2DVector.c  CMakeLists.txt  Despicable.h  Shorthand.h  fast_inv_sqrt.c  minmax.c  rectangles.c
Lapidary/: CMakeLists.txt  Lapidary.c  Lapidary.h
Wren/: CMakeLists.txt  GraphicsObject.c  Wren.h  shader_loading.c  texture_loading.c  textured_quad.c
